 * Graphics:
   * New portraits for Ancient Wose, Ruffian, Master-at-arms.
   * New melee animation for Thunderguard, Dragonguard.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Lithuanian, Russian
 * User interface:
   * Removed the hotkey to enable/disable mouse scrolling
   * Added a horizontal listbox
 * WML Engine:
   * Support for [show_if] inside [message]	
 * Miscellaneous and bugfixes:
   * Removed obsolete code for implicit linked widgets for the listbox
   * [part] caption= is no longer supported; prepend the CAPTION macro
     to story text instead
   * Fixed 100% CPU usage on storyscreens with no text (e.g. map screens)
   * Fix ODR issues in gui2
 * Animations
   * Movement have the number of steps done in value and the number of step left in value_second, this allows take-off and landing animations

Version 1.7.3:
 * AI:
   * New AI configuration syntax
 * Campaigns:
   * Two Brothers
     * Replaced campaign specific portraits with mainline portraits
   * Under the Burning Suns
     * Fixed bug #13978: UtBS: "stun" ability doesn't modify enemy ZoC
   * Legend of Wesmere
     * Story only scenarios now display the speaker's name in the title.	
     * Ambient sound effects.	
     * Redone the campaign's objectives.	
     * Added the "Dwarfish Scout" to the player's recruit list.
     * Scenario 19 now requires the player to destroy Saurgrath.
     * Scenario 14 redesigned.
     * Scenario 23 implemented Santi's plan to let half the army defect. 	
     * Map updates (mostly new alias terrains added).	
     * Replaced the campaign image with a transparent one (Thanks to Kitty).
 * Editor:
   * Renamed editor2 to editor pretty much everywhere
 * Graphics:
   * New portrait for the Duelist, Mermaid Enchantress/Siren,
     Priestess/Diviner, Merman Fighter/Warrior, Fencer, Drake
     Glider, Merman Hoplite, Goblin Impaler, Rouser, Merman Triton,
     Cavalier, Direwolf Rider, Paladin, Deathblade, Thug, Bandit,