@@ -11,7 +11,7 @@
 usage=map
 
 Mm          , Mm          , Mm          , Mm          , Mm^Xm       , Mm^Xm       , Mm^Xm       , Gg          , Ww          , Gg          , Dd          , Gg          , Aa          , Gg          , Aa          , Gg          , Hh          , Gg          , Mm          , Gg          , Uu          , Gg          , Wo          , Wo          , Ch          , Wo          , Wo          , Wo          , Gg          , Wo          , Wo          , Wo          , Md          , Wo          , Wo          , Wo          , Rd          , Wo          , Wo          
-Mm          , Mm          , Mm          , Mm          , Mm^Xm       , Mm^Xm       , Mm^Xm       , Gg^Vl       , Ww^Vm       , Gg          , Dd^Vda      , Gg          , Aa^Vea      , Aa^Vla      , Aa^Vha      , Gg          , Hh^Vhh      , Gg          , Mm^Vhh      , Gg          , Uu^Vu       , Gg          , Wo          , Wo          , Ch          , Wo          , Wo          , Wo          , Gg^Fet      , Wo          , Wo          , Wo          , Md          , Wo          , Wo          , Wo          , Rd          , Wo          , Wo          
+Mm          , Mm          , Mm          , Mm          , Mm^Xm       , Mm^Xm       , Mm^Xm       , Gg^Vl       , Ww^Vm       , Gg          , Dd^Vda      , Gg          , Aa^Vea      , Aa^Vla      , Aa^Vha      , Gg          , Hh^Vhh      , Gg          , Mm^Vhh      , Gg          , Uu^Vu       , Gg          , Wo          , Wo          , Ch          , Wo          , Wo          , Wo          , Gg^Fet      , Wo          , Wo          , Wo          , Md          , Wo          , Wo          , Wo          , Rd          , 3 Wo          , Wo          
 Mm          , Mm          , Mm          , Mm          , Mm          , Mm^Xm       , Gg          , Gg          , Gg          , Uu^Vud      , Gg          , Dd^Vdt      , Gg          , Gg^Ve       , Gg          , Gg^Vh       , Gg^Vo       , Ha^Vhha     , Gg          , Gs^Vht      , Wo          , Wo          , Cud         , Ch          , Wo          , Wo          , Ds          , Gg          , Wo          , Wo^Fet      , Hd^Fet      , Md^Fet      , Wo^Fet      , Wo          , Re          , Rd          , Wo          , Wo          , Wo          
 Mm          , Mm          , Gg          , Gg          , Gg          , Gg          , Gg          , Ch          , Ch          , Ch          , Ch          , Gg          , Gg          , Gg          , Gg          , Gg          , Gg^Vo       , Gg^Vo       , Gg          , Ss^Vhs      , Gg          , Cud         , Wo          , Wo          , Dd          , Ds          , Wo          , Wo          , Ha          , Hd          , Wo          , Wo          , Ql^Fet      , Re^Fet      , Wo          , Wo          , Uu^Fp       , Uu          , Uu          
 Mm          , Mm          , Gg          , Gg          , Gg          , Gg          , Gg          , Ch          , 1 Kh        , Ch          , Ww          , Gg          , Gg          , Mm^Vhh      , Gg          , Gg          , Gg          , Gg          , Gg          , Gs^Fp       , Gs^Fp       , Gs^Fp       , Gs^Fp       , Dd          , Wo          , Wo          , Gs          , Ha          , Wo          , Wo          , Mm          , Ql          , Wo          , Wo          , Uh^Fp       , Uh^Fp       , Wo^Fp       , Wo^Fp       , Wo          
@@ -63,6 +63,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
         recruit="Ghost,Troll Whelp,Assassin,Elvish Hero,Elvish Fighter,Elvish Archer,Horseman,Mage,Elvish Shaman,Red Mage,Spearman,Swordsman,Duelist,Fencer,Elvish Captain,Elvish Ranger,Elvish Shyde,Thief,Rogue,White Mage,Mage of Light,Elvish Sharpshooter,Silver Mage,Vampire Bat,Blood Bat,Dread Bat,Soulless,Walking Corpse"
         gold=2000
         enemy=2
+        team_name="1"
         shroud=yes
         [village]
             x,y=9,7
@@ -170,7 +171,52 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             generate_name=yes
         [/unit]
     [/side]
-
+    [side]
+        side=3
+        controller=ai
+        enemy=2
+        team_name="1"
+        type="Gryphon Master"
+        name="Friendly Explorer"
+        canrecruit=yes
+        fog=yes
+        shroud=yes
+        share_maps=no
+        share_view=no
+    [/side]
+    [event]
+        name=turn refresh
+        first_time_only=no
+        [if]
+            [variable]
+                name=side_number
+                equals=3
+            [/variable]
+            [then]
+                # This is to work around a broken idle_ai (it moves)
+                [end_turn]
+                [/end_turn]
+            [/then]
+        [/if]
+    [/event]
+    [label]
+        x,y=1,1
+        text="Explore the other top corner"
+    [/label]
+    [event]
+        name=moveto
+        [filter]
+            x,y=1,1
+        [/filter]
+        [modify_side]
+            side=3
+            share_maps=yes
+        [/modify_side]
+        [message]
+            speaker=unit
+            message="We should now be sharing maps with side 3!"
+        [/message]
+    [/event]
     [event]
         name=preload
         first_time_only=no
